# seamon

./: .gitignore  Cargo.toml  README.md
src/: ais.rs  main.rs  ship.rs
static/: index.html  map-config.js
